# CPSC-510-Logical-Foundations-of-Computing

./: .buildinfo  .gitignore  README.html  README.md  _config.yml  _toc.yml  add-workflow-file.sh  build.sh  genindex.html  index.html  intro.html  intro.md  lecture-by-lecture.html  lecture-by-lecture.md  links.html  myst.yml  objects.inv  overview.html  overview.md  pyproject.toml  requirements.txt  search.html  searchindex.js  setup.sh  sync-content-from-main.sh  sync-main-to-jupyter-v2.sh
.cursor-rules/: README.md  formatting-standards.md  quick-reference.md  review-guidelines.md  technical-standards.md
_sources/: README.md  intro.md  links.md  overview.md
_static/: ch10_timeline.css  custom.css  custom.js
content/: 0-0-title.html  0-1-intro-book.html  0-1-intro-book.md  0-2-intro-logic.html  0-2-intro-logic.md  0-3-intro-propositional-logic.html  0-4-intro-modal-logic.html  0-intro.html  0-intro.md  0-logic.html  0-logic.md  0-title.html  0-title.md  01-sat-solving-minisat.html  01-sat-solving-minisat.md  02-logic-programming-prolog.html  02-logic-programming-prolog.md  03-constraints-minizinc.html  03-constraints-minizinc.md  04-smt-solving-z3.html  04-smt-solving-z3.md  05-temporal-logic-spin.html  06-epistemic-logic-smcdel.html  06-epistemic-logic-smcdel.md  07-hoare-logic-dafny.html  07-hoare-logic-dafny.md  08-higher-order-logic-isabelle.html  08-higher-order-logic-isabelle.md  09-type-theory-lean.html  09-type-theory-lean.md  1-propositional-logic.html  1-propositional-logic.md  10-higher-order-logic.html  10-higher-order-logic.md  11-dependent-types.html  (+57 more)
(+208 files in other folders)
